# DAF-Sim

./: CODE_REVIEW_FIXES_SUMMARY.md  DAF_TEST_BENCH_IMPLEMENTATION_SUMMARY.md  DAF_TEST_BENCH_QUICKSTART.md  EQUATION_EXTRACTION.md  PILLAR3_COMPLETION_REPORT.md  PR-1-Build-Eulerian-Momentum-Equation-DAF-Simulator-comments.md  README.md  README_MOMENTUM.md  daf_benchmark.py  example_simulation.py  pyproject.toml  setup.py
.claude/: settings.local.json
daf_test_bench/: README.md  __init__.py  data_models.py  requirements.txt  test_harness.py
daf_test_bench/engines/: __init__.py  floc_pbm_wrapper.py  pillar3_wrapper.py
daf_test_bench/interfaces/: __init__.py  idaf_plant.py
daf_test_bench/metrics/: __init__.py  metrics_collector.py
daf_test_bench/test_cases/T2_Multiphase/: config.json
daf_test_bench/test_cases/T3_PBM/: config.json
daf_test_bench/tests/: __init__.py  test_framework.py
eulerian_momentum/: __init__.py  interfacial_forces.py  momentum_equation.py  phase.py
floc_kinetics_pbm/: FIXES.md  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
floc_kinetics_pbm/docs/: EQUATIONS.md
floc_kinetics_pbm/examples/: example_simulation.py
floc_kinetics_pbm/src/: __init__.py  kernels.py  pbe_solver.py  properties.py
floc_kinetics_pbm/tests/: __init__.py  benchmark_performance.py  test_kernels.py  test_pbe_solver.py  test_properties.py
pbm_equation_shell/: CHANGES_v1.1.md  EQUATION.md  GEOMETRIC_GRID_NOTES.md  README.md  __init__.py  population_balance_model.py
pbm_equation_shell/tests/: __init__.py  test_population_balance_model.py
pillar3_physics_model/: README.md  SUMMARY.md  debug_test.py  example_usage.py  pyproject.toml  setup.py
pillar3_physics_model/src/pillar3_physics_model/: __init__.py  bubble.py  collision_efficiency.py  dlvo_forces.py  fluid_properties.py  hydrodynamic_forces.py  particle.py  trajectory_solver.py
pillar3_physics_model/tests/: __init__.py  test_physics_model.py
references/: DAF-Simulator-Test Bench- SRR  DAF-Simulator-Test Bench-D
tests/: __init__.py  test_integration.py  test_interfacial_forces.py  test_momentum_equation.py  test_phase.py
