[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floc_kinetics_pbm"
version = "1.0.0"
description = "Population Balance Model for floc aggregation and breakage kinetics"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "DAF-Sim Development Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "matplotlib>=3.5.0",
]

[tool.setuptools.packages.find]
# Find packages from root directory
